@@ -1,3 +1,7 @@
+2009-08-22 Fatih Aşıcı <fatih@pardus.org.tr>
+		* Add optional destDir parameter to pisitools.dohtml as
+		pisitools.dodoc supports.
+
 2009-08-04 Ozan Çağlayan <ozan@pardus.org.tr>
 		* (pisi/util.py): Revert kernel module stripping for now as it's not
 		tested well.
